Fixed icon spacing

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ a {
     justify-content: center;
 }
 
+b {
+height: 50px;
+width: auto;
+}
+
+
 .title {
     background: url('assets/title.png') no-repeat;
     background-position: center;
@@ -107,120 +113,97 @@ a {
     padding-top: 0px;
     padding-bottom: 15px;
     border-radius: 15px;
-    width: 600px;
+    width: 850px;
     height: 550px;
 }
 
 .info {
     background-position: left top;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 220px;
     position: absolute;
     height: 100%;
     width: 100%;
 }
 .info img{
-    width: 5%;
+    width: 100px;
     height: auto;
 }
-
-.infoa {
-    background-position: left top;
-    margin-top: 27px;
-    margin-left: 90px;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    animation: LeftRight 1s linear infinite;
-}
-@keyframes LeftRight {
-    0%, 100% {
-      left: 425px;
-    }
-    50% {
-      left: 430px;
-    }
-  }
-.infoa img{
-    width: 2.5%;
-    height: auto;
-}
-
 
 .tea {
     background-position: left top;
-    margin-top: 5px;
-    margin-left: -550px;
+    margin-top: 10px;
+    margin-left: 330px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .tea img{
-    width: 4%;
+    width: 55px;
     height: auto;
 }
 
 .water {
     background-position: left top;
-    margin-top: 15px;
-    margin-left: -475px;
+    margin-top: 20px;
+    margin-left: 410px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .water img{
-    width: 3%;
+    width: 40px;
     height: auto;
 }
 
 .food {
     background-position: left top;
-    margin-top: 20px;
-    margin-left: -405px;
+    margin-top: 15px;
+    margin-left: 480px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .food img{
-    width: 3%;
+    width: 50px;
     height: auto;
 }
 
 .choc {
     background-position: left top;
-    margin-top: 25px;
-    margin-left: -325px;
+    margin-top: 30px;
+    margin-left: 570px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .choc img{
-    width: 4%;
+    width: 50px;
     height: auto;
 }
 
 .exercise {
     background-position: left top;
-    margin-top: 30px;
-    margin-left: -240px;
+    margin-top: 35px;
+    margin-left: 655px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .exercise img{
-    width: 4%;
+    width: 50px;
     height: auto;
 }
 
 .sleep {
     background-position: left top;
     margin-top: 20px;
-    margin-left: -170px;
+    margin-left: 730px;
     position: absolute;
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 .sleep img{
-    width: 3%;
+    width: 50px;
     height: auto;
 }
